--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,23 +10,52 @@
 </head>
 
 <body>
-    <form action="/create" method="post">
-        <label for="task">
-            <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
-            <button id="addButton" type="submit">Adicionar</button>
-        </label>
-    </form>
+    <header>
+        <% if (task === null) { %>
+        <form action="/create" method="post">
+            <label for="task">
+                <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
+                <button id="addButton" type="submit">Adicionar</button>
+            </label>
+        </form>
+        <% } else { %>
+        <form action="/updateTask/<%= task._id %>" method="post">
+            <label for="task">
+                <input value="<%= task.task %>" type="text" name="task" id="task">
+                <button id="addButton" type="submit">Atualizar</button>
+            </label>
+        </form>
+        <% } %>
+    </header>
 
-    <ul>
-        <% tasksList.forEach((task)=> { %>
-            <li>
-                <%= task.task %> | <%= task.date.toLocaleDateString('pt-br') %>
-            </li>
-        <% }) %>
-    </ul>
+    <section id="tasks">
+        <ul>
+            <% tasksList.forEach((task, index)=> { %>
+                <li id=<% index %>>
+                    <%= task.task %> | <%= task.date.toLocaleDateString('pt-br') %>
+                    <a href="/getById/<%= task._id %>/update">Editar</a>
+                    <a href="/getById/<%= task._id %>/delete">Apagar</a>
+                </li>
+            <% }) %>
+        </ul>
+    </section>
 
+    <% if (taskDelete != null) { %>
+    <section id="modal">
+        <div class="card">
+            <a href="/">x</a>
+
+            <h2>Confirmação</h2>
+            <hr>
+            <p>Deseja realmente apagar a tarefa: <%= taskDelete.task %>?</p>
+            <a href="/">Cancelar</a>
+            <a href="/deleteTask/<%= taskDelete._id %>">
+                Confirmar
+            </a>
+        </div>
+    </section>
+    <% } %>
 
     <script src="/script.js"></script>
 </body>
-
 </html>
