--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,192 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+:root {
+    --primary: hsl(240, 6%, 13%);
+    --secondary: hsl(206, 100%, 28%);
+    --white: hsl(0, 0%, 100%);
+    --hv-btn: hsl(135, 100%, 15%);
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+header {
+    background-color: var(--secondary);
+    padding: 3rem;
+    margin: 0.5rem;
+    text-align: center;
+}
+
+header h1 {
+    padding-bottom: 3rem;
+    width: 100%;
+}
+
+input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    padding: 0.6rem;
+    font-size: 1rem;
+    background-color: var(--primary);
+    color: var(--white);
+    width: 70%;
+}
+
+button {
+    padding: 0.6rem;
+    width: 25%;
+    background-color: var(--primary);
+    color: rgb(109, 109, 109);
+    text-align: center;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 0;
+    border: none;
+    transition: all .3s ease-in-out;
+}
+
+button:hover {
+    background-color: var(--hv-btn);
+    color: var(--white);
+}
+
+section#tasks {
+    margin: .5rem;
+}
+
+ul li {
+    position: relative;
+    padding: 1rem 0 1rem 1rem;
+    background-color: var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 1.15rem;
+    cursor: default;
+}
+
+ul li a {
+    color: var(--white);
+    text-transform: uppercase;
+}
+
+ul li:nth-child(odd) {
+    background-color: hsl(0, 0%, 25%);
+}
+
+ul li:hover {
+    background-color: hsl(0, 0%, 35%);
+}
+
+i {
+    color: var(--white);
+    font-size: inherit;
+}
+
+ul li span {
+    color: #ccc;
+    font-style: italic;
+    font-size: .8rem;
+    padding-left: 1rem;
+}
+
+a.edit,
+a.trash {
+    padding: 1rem 1.5rem;
+    transition: all 0.2s ease-in-out;
+}
+
+a.edit:hover {
+    background-color: #3643f4;
+    color: var(--white);
+}
+
+a.trash:hover {
+    background-color: #cc0000;
+    color: var(--white);
+}
+
+#infos {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+/* MODAL */
+
+section#modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+}
+
+div#card {
+    max-width: 30rem;
+    width: 100%;
+    position: relative;
+    background-color: #202024;
+    border-radius: 10px;
+}
+
+div#head-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+div#card h2 {
+    padding: 2rem;
+}
+
+div#card a#close {
+    color: #fff;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+}
+
+div#content-card {
+    padding: 1rem;
+    text-align: center;
+}
+
+div#buttons-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+a.btn-confirm,
+a.btn-cancel {
+    background-color: var(--white);
+    color: #000;
+    font-weight: bold;
 }
