--- a/public/style.css
+++ b/public/style.css
@@ -83,9 +83,39 @@ ul li {
     cursor: default;
 }
 
+ul li.check-true {
+    background-color: #888;
+    color: var(--white);
+    text-decoration: line-through;
+}
+
+ul li a.check-true::before {
+    content: "";
+    position: absolute;
+    border: 1px solid var(--white);
+    top: 17.5px;
+    left: 16px;
+    height: 15px;
+    width: 7px;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+ul li a.check-false::before {
+    content: "";
+    position: absolute;
+    border: 1px solid var(--white);
+    top: 17.5px;
+    left: 16px;
+    height: 16px;
+    width: 16px;
+    border-width: 2px;
+}
+
 ul li a {
     color: var(--white);
     text-transform: uppercase;
+    padding-left: 1.5rem;
 }
 
 ul li:nth-child(odd) {
