--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,9 @@
     <section id="tasks">
         <ul>
             <% tasksList.forEach((task, index)=> { %>
-                <li>
+                <li class="check-<%= task.check %>">
                     <div id="infos">
-                        <a href="/">
+                        <a href="/check/<%= task._id %>" class="check-<%= task.check %>">
                             <%= task.task %>
                         </a>
                         <span>Criado em <%= task.date.toLocaleDateString('pt-br') %> </span>
