--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,33 +12,27 @@
 
 <body>
     <% if (message != "") { %>
-    <section class="message message-<%= type %>">
-        <p><%= message %></p>
-        <span id="close-message"><i class="ph-x"></i></span>
-    </section>
+        <%- include('./components/messages', {message: message, type: type})  %>
     <% } %>
 
     <header>
         <% if (task===null) { %>
-            <h1>TO DO LIST</h1>
-            <form action="/create" method="post">
-                <label for="task">
-                    <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
-                    <button id="addButton" type="submit">Adicionar</button>
-                </label>
-            </form>
+            <%- include('./components/form', {
+                titleForm: 'TO DO LIST',
+                action: 'create',
+                idBtn: 'addButton',
+                nameBtn: 'Adicionar',
+                value: '',
+            }) %>
             <% } else { %>
-                <h1>EDITAR TAREFA</h1>
-                <form action="/updateTask/<%= task._id %>" method="post">
-                    <label for="task">
-                        <input value="<%= task.task %>" type="text" name="task" id="task">
-
-                        <button id="btnUpdate" type="submit">
-                            Atualizar
-                        </button>
-                    </label>
-                </form>
-                <% } %>
+                <%- include('./components/form', {
+                    titleForm: "EDITAR TAREFA",
+                    action: "updateTask/" + task._id,
+                    idBtn: "btnUpdate",
+                    nameBtn: "Atualizar",
+                    value: task.task,
+                }) %>
+            <% } %>
     </header>
 
     <section id="tasks">
@@ -62,32 +56,10 @@
     </section>
 
     <% if (taskDelete !=null) { %>
-        <section id="modal">
-            <div id="card">
-                <div id="head-card">
-                    <h2>Confirmação</h2>
-                    <a id="close" href="/">
-                        <i class="ph-x"></i>
-                    </a>
-                </div>
+        <%- include("./components/modalDel") %>
+    <% } %>
 
-                <hr>
-
-                <div id="content-card">
-                    <p>Deseja realmente apagar a tarefa: <%= taskDelete.task %>?</p>
-                </div>
-
-                <div id="buttons-card">
-                    <a class="edit btn-cancel" href="/">Cancelar</a>
-                    <a class="trash btn-confirm" href="/deleteTask/<%= taskDelete._id %>">
-                        Confirmar
-                    </a>
-                </div>
-            </div>
-        </section>
-        <% } %>
-
-            <script src="/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
